add basic styling to navbar links

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap');
+
 .App {
   text-align: center;
 }
@@ -35,4 +37,11 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.lower-case {
+  text-transform: unset !important;
+  color: black !important;
+  font-family: 'IBM Plex Mono', monospace !important;
+
 }
